--- a/personal.html
+++ b/personal.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" href="favicon.ico">
+	<link rel="icon" href="imgs/favicon.ico">
 	<link rel="stylesheet" href="css/html5reset.css">
 	<link rel="stylesheet" href="css/style.css">
 	<title>Family Page</title>
@@ -23,15 +23,17 @@
 
 	
 	
-	<main>
+  <main>
 	<p>In 2016 I loaded my kids into the minivan and took them on a drive across the Northern midwest states.  We went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.</p>
-		<img src = "wisconsin_dells.jpg" alt="My kids at Sasquatch Lake" width="25"/>
-		<img src = "badlands.jpg" alt="My kids at Badlands National Park" width="1000"/>
-		<img src= "falling.jpg" alt="My son pretending to fall" width="25"/>
-		<img src = "jewel_cave.JPG" alt="My kids at the Jewel Cave National Monument" width="1000"/>
+		<img src = "imgs/wisconsin_dells.jpg" alt="My kids at Sasquatch Lake" width="25"/>
+		<img src = "imgs/badlands.jpg" alt="My kids at Badlands National Park" width="1000"/>
+		<img src= "imgs/falling.jpg" alt="My son pretending to fall" width="25"/>
+		<img src = "imgs/jewel_cave.JPG" alt="My kids at the Jewel Cave National Monument" width="1000"/>
 	</main>
-	Colleen van Lent &copy; 2020
-</body>
+	<footer>
+		Colleen van Lent &copy; 2020
+	</footer>
+  </body>
 </html>
 
 
