--- a/personal.html
+++ b/personal.html
@@ -29,9 +29,9 @@
 		<img src = "imgs/badlands.jpg" alt="My kids at Badlands National Park" width="1000"/>
 		<img src= "imgs/falling.jpg" alt="My son pretending to fall" width="25"/>
 		<img src = "imgs/jewel_cave.JPG" alt="My kids at the Jewel Cave National Monument" width="1000"/>
-	</main>
+  </main>
 	<footer>
-		Colleen van Lent &copy; 2020
+		<p>Colleen van Lent &copy; 2020</p>
 	</footer>
   </body>
 </html>
